<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
         android:text="@string/translate"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />

    <TextView
        android:text="@string/empty_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/result"/>

  <GridLayout
      android:layout_height="match_parent"
      android:layout_width="match_parent"
      android:id="@+id/grid_layout">

    <Button
        android:text="@string/letterA"
        android:layout_column="0"
        android:layout_row="0"
        android:onClick="click"/>

    <Button
        android:text="@string/letterO"
        android:layout_column="1"
        android:layout_row="0"
        android:onClick="click"/>

    <Button
        android:text="@string/letterC"
        android:layout_column="2"
        android:layout_row="0"
        android:onClick="click"/>


    <Button
        android:text="@string/letterH"
        android:layout_column="3"
        android:layout_row="0"
        android:onClick="click"/>


    <Button
        android:text="@string/letterE"
        android:layout_column="0"
        android:layout_row="1"
        android:onClick="click"/>


    <Button
        android:text="@string/letterC"
        android:layout_column="1"
        android:layout_row="1"
        android:onClick="click"/>


    <Button
        android:text="@string/letterG"
        android:layout_column="2"
        android:layout_row="1"
        android:onClick="click"/>


    <Button
        android:text="@string/letterA"
        android:layout_column="3"
        android:layout_row="1"
        android:onClick="click"/>


    <Button
        android:text="@string/letterO"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="click"/>


    <Button
        android:text="@string/letterG"
        android:layout_column="1"
        android:layout_row="2"
        android:onClick="click"/>

    <Button
        android:text="@string/letterH"
        android:layout_column="2"
        android:layout_row="2"
        android:onClick="click"/>


    <Button
        android:text="@string/letterP"
        android:layout_column="3"
        android:layout_row="2"
        android:onClick="click"/>

  </GridLayout>

</LinearLayout>