<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:id="@+id/textView" />

   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TableRow>

           <TextView
               android:text="@string/login"
               android:layout_column="0"/>

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:ems="10"
               android:id="@+id/login" />

       </TableRow>

       <TableRow>

           <TextView
               android:text="@string/password"
               android:layout_column="0"/>

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:ems="10"
               android:id="@+id/password" />

       </TableRow>

   </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:layout_gravity="center"
        android:onClick="click" />




</LinearLayout>